minor errors calling dataframes and saving figures

--- a/exp/exp_CDB_001_HappinessScore.ipynb
+++ b/exp/exp_CDB_001_HappinessScore.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "[2199 rows x 11 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,9 +333,9 @@
     "    years = df[df['Country name'] == country]['year']\n",
     "    plt.plot(years, ladder_score, label=country)\n",
     "    plt.title('Ladder score of the '+str(num_countries)+' countries with the highest variance')\n",
-    "    plt.savefig(str(num_countries)+\"_ladder.png\", dpi=300, bbox_inches='tight')\n",
     "plt.xticks(range(2005,2024)[::2])\n",
-    "plt.legend();"
+    "plt.legend()\n",
+    "plt.savefig(str(num_countries)+\"_ladder.png\", dpi=300, bbox_inches='tight')"
    ]
   },
   {
