fixed directory in corr notebook

--- a/exp/exp_CDB_001_Correlation.ipynb
+++ b/exp/exp_CDB_001_Correlation.ipynb
@@ -14,6 +14,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "os.chdir(\"..\")\n",
     "if not (os.path.exists(\"./dat/cleaned\")):\n",
     "    os.mkdir(\"./dat/cleaned\")\n",
     "\n",
@@ -518,6 +519,13 @@
     "data = pd.read_csv(\"./dat/cleaned/data_for_regression.csv\")\n",
     "data.corr()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
