no more excel files and code for tueplots in happiness score plot

--- a/exp/exp_CDB_001_Correlation.ipynb
+++ b/exp/exp_CDB_001_Correlation.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -453,21 +453,20 @@
        "Random Data                           0.024773     1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"./dat/cleaned/data_for_regression.csv\")\n",
-    "data.drop(columns=['Unnamed: 0'], inplace=True)\n",
+    "data = pd.read_csv(\"./dat/cleaned/data_for_regression.csv\", index_col=0)\n",
     "data.corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +869,7 @@
        "Random Data                          -0.122090     1.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,6 +880,13 @@
     "data.drop(columns=['Unnamed: 0'], inplace=True)\n",
     "data.corr()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
