now a set can be chosen for preparing the regression model

--- a/exp/exp_CDB_001_Correlation.ipynb
+++ b/exp/exp_CDB_001_Correlation.ipynb
@@ -412,13 +412,13 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"./dat/cleaned/data_for_regression.csv\", index_col=0)\n",
+    "data = pd.read_csv(\"../dat/cleaned/data_for_regression.csv\", index_col=0)\n",
     "data.corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -821,24 +821,17 @@
        "Random Data                          -0.122090     1.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "data = pd.read_csv(\"./dat/cleaned/data_for_regression_Germany.csv\")\n",
+    "data = pd.read_csv(\"../dat/cleaned/data_for_regression_Ge.csv\")\n",
     "data.drop(columns=['Unnamed: 0'], inplace=True)\n",
     "data.corr()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
