plots of feature importance and better way to handle regression output

--- a/exp/exp_CDB_001_HappinessScore.ipynb
+++ b/exp/exp_CDB_001_HappinessScore.ipynb
@@ -346,7 +346,7 @@
     }
    ],
    "source": [
-    "from exp_CDB_001_scatterplot import scatter\n",
+    "from exp_CDB_001_Scatterplot import scatter\n",
     "prevalences = ['Eating_Disorder', 'Drug_Use_Disorder','Depression','Schizophrenia','Anxiety','Bipolar','Alcohol_Use_Disorder']\n",
     "for prevalence in prevalences:\n",
     "    for more_countries in [True, False]:\n",
